# RNA_PREDICT

./: .augement_code_rules  .coverage_config.json  .coverage_config.json.bak  .coveragerc  .env.example  .gitignore  .gitmodules  .roomodes  .windsurfrules  404.html  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  all_tests_no_maxfail.txt  analysis_results_atom_utils.py.txt  analysis_results_coordinate_utils.py.txt  analysis_results_general.py.txt  analysis_results_rotation.py.txt  analysis_results_tensor_ops.py.txt  check_dependencies.js  combined_pipeline_output.txt  cosmic-ray.dev.toml  dev_run_output.txt  hydra_config_debug.py  index.html  mkdocs.yml  model_summary.txt  mutatest.ini  mypy.ini  package-lock.json  package.json  partial_checkpoint_full_pipeline_script.py  predict_test.ct  prompt.txt  pyproject.toml  pytest.ini  python_file_line_counts.txt  (+13 more)
.github/: FUNDING.yml  rename_project.sh
.github/workflows/: main.yml  mkdocs.yml  release.yml
docs/: 2d_structure_prediction_papers.md  AF3_paper.md  M2 Plan  M2 Plan.md  README.md  RNA_STRUCTURE_PREDICTION_Categorized.csv  code_quality_best_practices.md  comprehensive_debugging_guide.md  core_framework.md  create_test_guidelines.md  index.md  kaggle_competition.md  prompt.txt  s4_diffusion.md  streamline_plan.md  torsion_angle_Latent_Manifold_Representation.md
docs/examples/: compare_precomputed_torsions.md  custom_torsion_example.md  test_wrapped_hypot_test_gen.md
docs/guides/: training_loss_hypothesis_analysis.md  x3dna_dssr_setup.md
docs/pipeline/: Energy Minimization & Molecular Dynamics (MD) for RNA Structure Refinement.md  Energy_Minimization_&_Molecular_Dynamics_(MD)_for_RNA_Structure_Refinement.md  test_time_scaling.md
docs/testing/: cosmic-ray.md  mutatest.md  mutation_testing.md  mutation_testing_guide.md  progressive_coverage.md
examples/compare_precomputed_torsions/: index.html
examples/custom_torsion_example/: index.html
examples/mdanalysis_torsion_example/: index.html
examples/prompt_template/: index.html
examples/test_wrapped_hypot_test_gen/: index.html
generated_tests/: test_SimpleLatentMerger_basic.py
guides/getting_started/: index.html
guides/training_loss_hypothesis_analysis/: index.html
guides/x3dna_dssr_setup/: index.html
lightning_logs/version_0/: hparams.yaml
pipeline/Energy_Minimization_&_Molecular_Dynamics_(MD)_for_RNA_Structure_Refinement/: index.html
pipeline/test_time_scaling/: index.html
reference/external_lit/: ConnectedPapers-for-RNA-secondary-structure-prediction-using-an-ensemble-of-two_20dimensional-deep-neural-networks-and-transfer-learning.txt
rna_predict/: __init__.py  __main__.py  atom_encoder.py  atom_transformer.py  base.py  benchmark.py  block_sparse_attention.py  cli.py  input_feature_embedding.py  interface.py  main.py  predict.py  print_rna_pipeline_output.py  run_all_pipeline.py  run_full_pipeline.py  run_pipeline.py  stageA_rfold.py  submission.csv  train.py  utils.py
rna_predict/benchmarks/: benchmark.py
rna_predict/conf/: README.md  __init__.py  config_schema.py  default.yaml  predict.yaml  test_data.yaml  test_stageD.yaml  utils.py
rna_predict/dataset/: atom_lists.py  collate.py  combined_loader.py  dataset_loader.py  loader.py
rna_predict/kaggle/: data_utils.py  kaggle_env.py  legacy_feature_engineering_and_modeling.py  predictor_config.py  rna-predict.py  rna_predict.py  submission_validator.py
rna_predict/models/: torsionbert_inference.py
rna_predict/pipeline/: __init__.py  config.py  main.py  model.py  run_stageA.py  stageA.py  stageA_rfold.py
rna_predict/runners/: batch_runner.py  full_pipeline.py  pipeline_cli.py
rna_predict/scripts/: __init__.py  analyze_code.sh  batch_analyze.sh  batch_test_generator.py  calculate_torsion_angles.py  compare_precomputed_torsions.py  count_python_lines.py  create_github_issues.py  custom_torsion_example.py  hypot_test_gen.py  mark_slow_tests.py  mdanalysis_torsion_example.py  prompt_template.md  reorg_tests.sh  run_all_pipeline.py  run_failing_tests.sh  show_coverage.py  update_coverage_config.py
rna_predict/tests/: test_ml_utils.py  test_proteins.py  test_rna.py  test_stageB_torsionbert.py
scripts/: README.md  demo_stochastic_inference.py  inspect_checkpoint.py  inspect_pt_file.py  partial_checkpoint_full_pipeline_script.py  print_lightning_state_dict_keys.py  reorganize_scripts.sh  run_all_pipeline.py  run_mutation_tests.sh  task-complexity-report.json  task-master
search/: search_index.json
streamline_plan/: index.html
tests/: conftest.py  debug_adaptive_layernorm.py  debug_mpnerf_nan.py  debug_msa.py  test_adaptive_layernorm.py  test_adaptive_layernorm_more_cases.py  test_args_namespace.py  test_atom_attention_encoder.py  test_atom_encoder.py  test_atom_transformer.py  test_atom_trunk_small_natom.py  test_base.py  test_batch_test_generator.py  test_benchmark.py  test_benchmark_suite.py  test_block_sparse.py  test_config.py  test_dataset_loader.py  test_debug_logging.py  test_device_param.py  test_dnabert_mps.py  test_download.py  test_dummy.py  test_embedders.py  test_fix_leading_zeros.py  test_generator.py  test_hypothesis.py  test_hypothesis2.py  test_input_embd_utils.py  test_main.py  test_main_integration.py  test_memory.py  test_ml_utils.py  test_ml_utils_consolidated.py  test_performance.py  test_pipeline_integration.py  test_print_rna_pipeline_output.py  test_print_rna_pipeline_output_comprehensive.py  test_protenix_integration.py  test_ref_space_uid_patch.py  (+18 more)
(+661 files in other folders)
