[build-system]
requires = ["setuptools>=66.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rna-predict"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "biopython>=1.85",
    "datasets>=3.3.2",
    "einops>=0.8.1",
    "lxml>=5.3.1",
    "mdanalysis>=2.9.0",
    "numpy>=2.2.3",
    "torch>=2.0.1, <2.6.0",
    "transformers>=4.49.0",
]

# If you have optional (dev) dependencies:
[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "coverage>=7.6.12",
    "flake8>=7.1.2",
    "gitchangelog>=3.0.4",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pymdown-extensions",
]

# If you want a console script:
[project.scripts]
rna_predict = "rna_predict.__main__:main"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "snoop>=0.6.0",
]
[tool.setuptools.packages.find]
include = ["rna_predict*"]
exclude = ["site"]
